# monorepo-example

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  bump.sh  get_commit_id.py  get_commit_id.sh  package.json  pyproject.toml  release.sh
.conventional-changelog/: commit.hbs  config.js  template.hbs
.github/workflows/: check.yaml  lint.yaml  serve.yaml
build_scripts/: build.sh  build_and_test.sh  bump.sh  bump_and_release.sh  deploy.sh  release.sh  serve.sh
frameworks/python/libs/lessmore.clock/: pyproject.toml
frameworks/python/libs/lessmore.clock/lessmore/clock/: clock.py
frameworks/python/libs/lessmore.code_block/: pyproject.toml
frameworks/python/libs/lessmore_test.clock/: pyproject.toml
frameworks/python/libs/lessmore_test.clock/tests/: test_clock.py
frameworks/python/libs/lessmore_test.code_block/: pyproject.toml
setup/macos/: setup_monorepo.sh
src/python/libs/lessmore.clock/: pyproject.toml
src/python/libs/lessmore.clock/lessmore/clock/: __init__.py
src/python/libs/lessmore.clock/tests/: test_clock.py
src/python/libs/lessmore_test.clock/: pyproject.toml
src/python/libs/lessmore_test.clock/lessmore_test/clock/: __init__.py  clock.py
src/python/libs/lessmore_test.clock/tests/: test_clock.py
src/python/libs/lessmore_test.code_block/lessmore_test/code_block/: __init__.py
src/python/libs/lessmore_test.imports/: pyproject.toml
src/python/libs/lessmore_test.imports/lessmore_test/imports/: external.py  interactive.py
src/python/services/hello-world/: Dockerfile  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  update_requirements.sh
src/python/services/hello-world/build_scripts/: .env  build.sh  build_and_test.sh  deploy.sh  serve.sh
src/python/services/hello-world/hello_world/: app.py
src/python/services/hello_world/: Dockerfile  docker-compose-test.yaml  docker-compose.yaml  pyproject.toml  update_requirements.sh
src/python/services/hello_world/build_scripts/: build.sh  build_and_test.sh  deploy.sh  serve.sh
src/python/services/hello_world/hello_world/: app.py
src/python/services/hello_world/tests/: test_app.py
src/python/tools/: pyfmt
tools/: get-poetry.py  get_commit_id.py  run_files_by_pattern.py
