[tool.poetry]
name = "lessmore"
version = "0.3.0"
description = "Mark Lidenberg's Monorepo"
authors = [ "marklidenberg <marklidenberg@gmail.com>" ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.20.0"

[tool.black]
line-length = 120

[tool.isort]
#  isort **/*.py --profile black --lines-between-types 1 --lines-after-imports 2 --combine-as --line-length 120
profile = "black"
combine_as_imports = true
lines_between_types = 1
lines_after_imports = 2
line_length = 120

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = false
branch = "master"
