[tool.poetry]
name = "lessmore.clock"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]
packages = [
    { include = "lessmore" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
"lessmore.code_block" = {path = "../lessmore.code_block", develop = true}  # other namespaced modules work, too.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
