[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
requests = "^2.28.1"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]
"lessmore_test.clock" = {path = "$MONOREPO_PATH/source/python/libs/libs/lessmore_test.clock", develop = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
