[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = ""
authors = ["marklidenberg <marklidenberg@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
"lessmore_test.clock" = {path = "../../libs/lessmore_test.clock", develop = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
